deployments/kubernetes/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: htbackend
  labels:
    app: HTBE
spec:
  replicas: 1
  selector:
    matchLabels:
      app: HTBE
  template:
    metadata:
      labels:
        app: HTBE
    spec:
      containers:
      - name: htbackend
        image: ht-be:0.0.1
        ports:
        - containerPort: 5001
