deployments/kubernetes/manifests/htbe_service.yaml
kind: Service
apiVersion: v1
metadata:
  name: ht-be
spec:
  selector:
    app: HTBE
  ports:
    - name: ports
      port: 5001
      targetPort: 5001
  type: ClusterIP
