deployments/kubernetes/manifests/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ht-be
  annotations:
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 256m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: 120s
    nginx.ingress.kubernetes.io/proxy-read-timeout: 60s
spec:
  tls:
  - hosts:
    - ht-be.domain.com
    secretName: ht-be.domain.com
  rules:
  - host: ht-be.domain.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ht-be
            port: 
              number: 80
